# python-project-lvl1

./: .gitignore  .travis.yml  5-step.cast  6-step.cast  Makefile  README.md  pyproject.toml  setup.py
brain_games/: brain_logic.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_logic.py  brain_prime.py  brain_progression.py
xegrassa_brain_games.egg-info/: PKG-INFO  SOURCES.txt
