[tool.poetry]
name = "xegrassa_brain_games"
version = "1.0.5"
description = "add part EVEN"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

