[tool.poetry]
name = "xegrassa_brain_games"
version = "1.3"
description = "5-simple game for project in Hexlet"
authors = ["Egrassa <bacek90@mail.ru>"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Natural Language :: Russian",
	"Programming Language :: Python :: 3.6"
]
repository = "https://github.com/xegrassa/python-project-lvl1"
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-logic = "brain_games.scripts.brain_logic:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

